# stm32f4stdlib

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  stm32f4stdperiph.pc
cmake/: toolchain.cmake
src/: CMakeLists.txt
src/StdPeriph_Driver/src/: stm32f4xx_rtc.c
test_package/: conanfile.py
